--- a/task2/index.html
+++ b/task2/index.html
@@ -6,10 +6,42 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="style.css">
-  <title>Task1</title>
+  <title>Task2</title>
 </head>
 <body>
-  
+  <section>
+    <h2>Circle</h2>
+    <div class="container">
+      <div class="circle" id="circle">
+        <div class="circle__container_sections">
+          <div class="circle__section circle__section-first"></div>
+          <div class="circle__section circle__section-second"></div>
+        </div>
+        <div class="circle__container_sections">
+          <div class="circle__section circle__section-third"></div>
+          <div class="circle__section circle__section-fourth"></div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section>
+    <h2>Rectangle</h2>
+    <div class="container">
+      <div class="rectangle" id="rectangle"></div>
+    </div>
+  </section>
+  <section>
+    <h2>Square</h2>
+    <div class="container">
+      <div class="square" id="square"></div>
+    </div>
+  </section>
+  <section>
+    <h2>Triangle</h2>
+    <div class="container container-triangle">
+      <div class="triangle" id="triangle"></div>
+    </div>
+  </section>
   <script src="index.js"></script>
 </body>
 </html>
