--- a/task3/index.html
+++ b/task3/index.html
@@ -9,7 +9,17 @@
   <title>Task3</title>
 </head>
 <body>
-  
+  <section class="video">
+   <h2>
+      Video
+   </h2>
+    <div class="video__container">
+      <div class="video__wrapper">
+        <video class="video__player" src="./assets/video/webm.webm" id="player" width="500"></video>
+        <div class="video__time">00:00:000</div>
+      </div>
+    </div>
+  </section>  
   <script src="index.js"></script>
 </body>
 </html>
