--- a/task4/index.html
+++ b/task4/index.html
@@ -6,9 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="normalize.css">
   <link rel="stylesheet" href="style.css">
-  <title>Task1</title>
+  <title>Task4</title>
 </head>
 <body>
+  <div class="users" id="users"></div>
+  <div class="pagination" id="pagination"></div>
+
   
   <script src="index.js"></script>
 </body>
