feat: task5 done

--- a/task5/index.html
+++ b/task5/index.html
@@ -9,7 +9,15 @@
   <title>Task5</title>
 </head>
 <body>
-  
+  <div class = "container" id="container">
+    <div class="subject square"></div>
+    <div class="subject rectangle"></div>
+    <div class="subject triangle"></div>
+  </div>
+  <div class="container">
+    <button type="button" class="button" id="button">Click on me</button>
+  </div>
+
   <script src="index.js"></script>
 </body>
 </html>
